# MotionGloveInterface

./: .gitignore  AttachedConnectorView.qml  CMakeLists.txt  ConnectionView.qml  CreateProcessNodeWindow.qml  DeviceStatusView.qml  FlexScrollViewLayout.qml  InputConnector.qml  InputNodeView.qml  MotionDeviceStruct.h  OscOutputDeviceView.qml  OscOutputView.qml  OutputConnector.qml  OutputNodeView.qml  Pn_AbsValueView.qml  Pn_DiffValueView.qml  Pn_NoteSelectorView.qml  Pn_ScaleView.qml  Pn_SplitComponentsView.qml  Pn_SumComponentsView.qml  Pn_TouchRecognizerView.qml  ProcessingNodeBase.qml  QuatView.qml  README.md  SensorInputContainer.qml  SensorValuesView.qml  Singleton.h  TestDrag.qml  TextNumberField.qml  ValueWithSliderView.qml  VariableValuesView.qml  VectorView.qml  connectionviewcontroller.cpp  connectionviewcontroller.h  dataprocessingnode.cpp  dataprocessingnode.h  devicedata.cpp  devicedata.h  devicedatainput.cpp  devicedatainput.h  (+67 more)
